--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.1",
     "@popperjs/core": "2.11.0",
     "bootstrap": "^5.1.3",
     "next": "^12.1.5",
+    "npm-install-global": "^1.0.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "yarn": "^1.22.18"
   },
   "devDependencies": {
     "eslint": "8.13.0",
