--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@popperjs/core": "2.11.0",
+    "@splinetool/react-spline": "^2.1.0",
+    "@splinetool/runtime": "^0.9.37",
     "bootstrap": "^5.1.3",
     "next": "^12.1.5",
     "npm-install-global": "^1.0.0",
@@ -18,6 +20,7 @@
     "react-3d-viewer": "^1.0.12",
     "react-bootstrap": "^2.3.0",
     "react-dom": "^18.0.0",
+    "react-spline": "^1.2.1",
     "yarn": "^1.22.18"
   },
   "devDependencies": {
