--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@popperjs/core": "2.11.0",
     "@splinetool/react-spline": "^2.1.0",
-    "@splinetool/runtime": "^0.9.37",
+    "@splinetool/runtime": "^0.9.40",
     "bootstrap": "^5.1.3",
     "next": "^12.1.5",
     "npm-install-global": "^1.0.0",
-    "react": "^18.0.0",
+    "react": "^18.1.0",
     "react-3d-viewer": "^1.0.12",
     "react-bootstrap": "^2.3.0",
     "react-dom": "^18.0.0",
     "react-spline": "^1.2.1",
+    "spline": "^0.0.0",
     "yarn": "^1.22.18"
   },
   "devDependencies": {
