--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "react-3d-viewer": "^1.0.12",
     "react-bootstrap": "^2.3.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
+    "react-slick": "^0.29.0",
     "react-spline": "^1.2.1",
+    "slick-carousel": "^1.8.1",
     "spline": "^0.0.0",
     "yarn": "^1.22.18"
   },
