--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "-": "^0.0.1",
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@popperjs/core": "2.11.0",
+    "@react-three/drei": "^9.9.0",
+    "@react-three/fiber": "^8.0.16",
     "@splinetool/react-spline": "^2.1.0",
     "@splinetool/runtime": "^0.9.40",
     "bootstrap": "^5.1.3",
@@ -26,6 +28,7 @@
     "react-spline": "^1.2.1",
     "slick-carousel": "^1.8.1",
     "spline": "^0.0.0",
+    "three": "^0.140.2",
     "yarn": "^1.22.18"
   },
   "devDependencies": {
