--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@popperjs/core": "2.11.0",
     "@react-three/drei": "^9.9.0",
-    "@react-three/fiber": "^8.0.16",
+    "@react-three/fiber": "^7.0.29",
+    "@restart/ui": "^1.2.0",
     "@splinetool/react-spline": "^2.1.0",
     "@splinetool/runtime": "^0.9.40",
     "bootstrap": "^5.1.3",
