--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-icons": "^4.3.1",
     "react-slick": "^0.29.0",
     "react-spline": "^1.2.1",
+    "react-spring": "^9.4.5",
+    "react-three-fiber": "^6.0.13",
     "slick-carousel": "^1.8.1",
     "spline": "^0.0.0",
     "three": "^0.140.2",
