--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "-": "^0.0.1",
+    "@3dweb/360javascriptviewer": "^1.8.16",
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@popperjs/core": "2.11.0",
     "@react-three/drei": "^9.9.0",
@@ -30,6 +31,7 @@
     "react-spline": "^1.1.0",
     "react-spring": "^9.4.5",
     "react-three-fiber": "^6.0.13",
+    "react-use-gesture": "^9.1.3",
     "slick-carousel": "^1.8.1",
     "spline": "^0.0.0",
     "three": "^0.140.2",
